--- a/package.json
+++ b/package.json
@@ -36,5 +36,11 @@
     "eslint-config-next": "16.0.7",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "overrides": {
+    "baseline-browser-mapping": "$baseline-browser-mapping"
+  },
+  "resolutions": {
+    "baseline-browser-mapping": "^2.9.19"
   }
 }
